# splatcraft

./: .gitignore  README.md  pyproject.toml
scripts/: install_deps.sh
src/splatcraft/: __init__.py  __main__.py  cli.py  config.py  pipeline.py
src/splatcraft/stages/: __init__.py  export_splat.py  extract.py  optimize.py  package.py  physics.py  preprocess.py  train.py
src/splatcraft/ui/: __init__.py  gradio_app.py
src/splatcraft/utils/: gpu.py  vrchat.py
tests/: test_splatcraft.py
