[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "splatcraft"
version = "0.1.0"
description = "Photo → 3D Gaussian Splatting → VRChat asset pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "pillow>=10.0",
    "numpy>=1.24",
    "trimesh>=4.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
gui = ["gradio>=4.0"]
gpu = [
    "torch>=2.1",
    "gsplat>=1.0",
]
dev = ["pytest>=7.0", "ruff>=0.1"]

[project.scripts]
splatcraft = "splatcraft.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/splatcraft"]

[tool.ruff]
target-version = "py310"
line-length = 100
